--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -1,5 +1,10 @@
-<h1>Hello there</h1>
+<app-header></app-header>
+
+<h1 class="text-danger">{{ title }}</h1>
 <app-button></app-button>
+<app-button></app-button>
+<app-button></app-button>
+<!-- <input [type]="inputType"> -->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
