--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -1,9 +1,18 @@
 <app-header></app-header>
 
 <h1 class="text-danger">{{ title }}</h1>
-<app-button></app-button>
-<app-button></app-button>
-<app-button></app-button>
+<div>
+    <div>
+        <app-button></app-button>
+    </div>
+    <div class="my-3">
+        <app-button></app-button>
+    </div>
+    <div>
+        <app-button></app-button>
+    </div>
+</div>
+
 <!-- <input [type]="inputType"> -->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
