--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -1,16 +1,25 @@
 <app-header></app-header>
 
-<h1 class="text-danger">{{ title }}</h1>
+<h1 [ngClass]="getTitleClass()">{{ title }}</h1>
+<!-- <button (click)="toggleTitleColor()">Toggle Tittle color</button>
+<button (click)="addAnotherItem()">Add Item</button>
+
+<div *ngIf="isItNight()">Good Night</div>
+
+<ul>
+    <li *ngFor="let item of items">{{item}}</li>
+</ul> -->
+
 <div>
+    <div *ngFor="let label of labels">
+        <app-button [label]="label"></app-button>
+    </div>
+    <!-- <div class="my-3">
+        <app-button></app-button>
+    </div>
     <div>
         <app-button></app-button>
-    </div>
-    <div class="my-3">
-        <app-button></app-button>
-    </div>
-    <div>
-        <app-button></app-button>
-    </div>
+    </div> -->
 </div>
 
 <!-- <input [type]="inputType"> -->
