--- a/client-angular/src/app/button/button.component.html
+++ b/client-angular/src/app/button/button.component.html
@@ -1,1 +1,1 @@
-<button (click)="buttonClick()" class="btn btn-primary">{{ label }}!</button>
+<button (click)="buttonClick()" class="btn btn-primary">{{ label }}</button>
