--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -7,7 +7,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
@@ -22,10 +22,12 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="d-flex navbar-nav">
-        <span class="navbar-text">Hello {{userName | titlecase}}</span>
-        <span class="navbar-text mx-3">|</span>
-        <span class="navbar-text">{{today | date}}</span>
+        <ul class="d-flex navbar-nav">
+            <li class="nav-item">
+                <span class="navbar-text">Hello {{userName | titlecase}}</span>
+                <span class="navbar-text mx-3">|</span>
+                <span class="navbar-text">{{today | date}}</span>
+            </li>
+        </ul>
     </div>
 </nav>
