--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -2,6 +2,14 @@
 
 <h1 [ngClass]="getTitleClass()">{{ title }}</h1>
 
+<a routerLink="/home-component" routerLinkActive="active" ariaCurrentWhenActive="page"
+    class="nav-link">Home</a>
+
+<a routerLink="/customers-component" routerLinkActive="active" ariaCurrentWhenActive="page"
+    class="nav-link">Customers</a>
+
+
+
 <div>
     <div *ngFor="let label of labels">
         <app-button [label]="label"></app-button>
