--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -19,10 +19,14 @@
                         ariaCurrentWhenActive="page" class="nav-link">Customers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
+                    <!-- <a class="nav-link" href="#">Products</a> -->
+                    <a routerLink="/products-component" routerLinkActive="active"
+                        ariaCurrentWhenActive="page" class="nav-link">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Orders</a>
+                    <!-- <a class="nav-link disabled">Orders</a> -->
+                    <a routerLink="/orders-component" routerLinkActive="active"
+                        ariaCurrentWhenActive="page" class="nav-link">Customers</a>
                 </li>
             </ul>
         </div>
