--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -9,24 +9,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
                     <a routerLink="/home-component" routerLinkActive="active"
                         ariaCurrentWhenActive="page" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <!-- <a class="nav-link" href="#">Customers</a> -->
                     <a routerLink="/customers-component" routerLinkActive="active"
                         ariaCurrentWhenActive="page" class="nav-link">Customers</a>
                 </li>
                 <li class="nav-item">
-                    <!-- <a class="nav-link" href="#">Products</a> -->
                     <a routerLink="/products-component" routerLinkActive="active"
                         ariaCurrentWhenActive="page" class="nav-link">Products</a>
                 </li>
                 <li class="nav-item">
-                    <!-- <a class="nav-link disabled">Orders</a> -->
                     <a routerLink="/orders-component" routerLinkActive="active"
-                        ariaCurrentWhenActive="page" class="nav-link">Customers</a>
+                        ariaCurrentWhenActive="page" class="nav-link">Orders</a>
                 </li>
             </ul>
         </div>
