--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -10,6 +10,8 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<router-outlet></router-outlet>
+<main class="p-4">
+    <router-outlet></router-outlet>
+</main>
 
 <app-footer></app-footer>
