--- a/client-angular/src/app/header/header.component.html
+++ b/client-angular/src/app/header/header.component.html
@@ -24,6 +24,10 @@
                     <a routerLink="/orders-component" routerLinkActive="active"
                         ariaCurrentWhenActive="page" class="nav-link">Orders</a>
                 </li>
+                <li class="nav-item">
+                    <a routerLink="/signup-component" routerLinkActive="active"
+                        ariaCurrentWhenActive="page" class="nav-link">Sign Up</a>
+                </li>
             </ul>
         </div>
         <ul class="d-flex navbar-nav">
