--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -33,7 +33,7 @@
                         <i [ngClass]="displaySort('email')"></i>
                     </button>
                 </th>
-                <th>Phone</th>
+                <th class="align-middle">Phone</th>
                 <th>
                     Country
                     <button (click)="sortCustomers('country_name')" class="btn btn-default">
