--- a/client-angular/src/themes/dark/styles.scss
+++ b/client-angular/src/themes/dark/styles.scss
@@ -1,5 +1,6 @@
 @import "../common/bootstrap-variables";
 @import "../common/bootstrap";
+@import "../common/app";
 
 .dark-theme {
     background-color: #141719;
@@ -9,5 +10,9 @@
     table td,
     i {
         color: #fff;
+    }
+
+    .section-bg {
+        background-color: #2d3236;
     }
 }
