--- a/client-angular/src/themes/light/styles.scss
+++ b/client-angular/src/themes/light/styles.scss
@@ -1,5 +1,6 @@
 @import "../common/bootstrap-variables";
 @import "../common/bootstrap";
+@import "../common/app";
 
 .light-theme {
     background-color: #f5f8ff;
