--- a/client-angular/src/app/shared/footer/footer.component.html
+++ b/client-angular/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 bg-light">
+<footer class="footer py-3">
     <div class="container">
         <span class="text-muted">Copyrights © {{ date | date:'Y' }}</span>
     </div>
