--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -20,6 +20,33 @@
                 Export
             </button>
         </div>
+        <div class="p-2">
+            <button class="btn btn-primary">
+                <i class="bi-person-plus pe-2"></i>
+                Add Customer
+            </button>
+        </div>
+    </div>
+
+    <div>
+        <form [formGroup]="customerForm" (ngSubmit)="onSumbit()">
+            <div class="mb-3">
+                <label for="" class="form-label">Name</label>
+                <input formControlName="name" type="text" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="" class="form-label">Email</label>
+                <input formControlName="email" type="email" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="" class="form-label">Phone</label>
+                <input formControlName="phone" type="text" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="" class="form-label">Country</label>
+
+            </div>
+        </form>
     </div>
 
 
