--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -21,14 +21,14 @@
             </button>
         </div>
         <div class="p-2">
-            <button class="btn btn-primary">
+            <button (click)="toggleForm()" class="btn btn-primary">
                 <i class="bi-person-plus pe-2"></i>
                 Add Customer
             </button>
         </div>
     </div>
 
-    <div>
+    <div *ngIf="showForm">
         <form [formGroup]="customerForm" (ngSubmit)="onSumbit()">
             <div class="mb-3">
                 <label for="" class="form-label">Name</label>
