--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -44,7 +44,7 @@
             </div>
             <div class="mb-3">
                 <label for="" class="form-label">Country</label>
-
+                <select name="" id=""></select>
             </div>
             <button [disabled]="!customerForm.valid" type="submit"
                 class="btn btn-primary">Add</button>
