submit new customer

--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -44,7 +44,7 @@
             </div>
             <div class="mb-3">
                 <label for="" class="form-label">Country</label>
-                <select formControlName="country" class="form-select">
+                <select formControlName="country_id" class="form-select">
                     <option *ngFor="let country of countries" [value]="country.id">
                         {{country.name}}</option>
                 </select>
