--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -90,3 +90,7 @@
         </tbody>
     </table>
 </div>
+
+<app-notification [headerLabel]="'Notice'" [showNotification]="showNotification">
+    <span class="text-white">Success</span>
+</app-notification>
