--- a/client-angular/src/app/shared/notification/notification.component.html
+++ b/client-angular/src/app/shared/notification/notification.component.html
@@ -10,7 +10,7 @@
         </div>
         <!-- button -->
         <div class="text-center pt-10">
-            <button type="button" class="btn btn-xs btn-default">
+            <button (click)="onButtonClicked()" type="button" class="btn btn-xs btn-default">
                 {{buttonLabel}}
             </button>
         </div>
