new export component

--- a/client-angular/src/app/products/products.component.html
+++ b/client-angular/src/app/products/products.component.html
@@ -1,3 +1,7 @@
+<div>
+    <app-export (buttonClicked)="exportProductsData()"></app-export>
+</div>
+
 <table class="table">
     <thead>
         <tr>
