--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -15,10 +15,7 @@
             </div>
         </div>
         <div class="p-2">
-            <button (click)="exportCustomersData()" class="btn btn-primary">
-                <i class="bi-download pe-2"></i>
-                Export
-            </button>
+            <app-export (buttonClicked)="exportCustomersData()"></app-export>
         </div>
         <div class="p-2">
             <button (click)="toggleForm()" class="btn btn-primary">
