page title component

--- a/client-angular/src/app/customers/customers.component.html
+++ b/client-angular/src/app/customers/customers.component.html
@@ -1,6 +1,8 @@
-<h2 class="my-4 py-4">
+<!-- <h2 class="my-4 py-4">
     Customers <small class="text-secondary">({{customersTotal()}})</small>
-</h2>
+</h2> -->
+
+<app-page-title [totalItems]="customersTotal()" [title]="'Customers'"></app-page-title>
 
 <div class="section-bg p-3">
 
