--- a/client-angular/src/app/products/products.component.html
+++ b/client-angular/src/app/products/products.component.html
@@ -1,3 +1,6 @@
+<app-page-title [totalItems]="productsTotal()" [title]="'Products'"></app-page-title>
+
+
 <div>
     <app-export (buttonClicked)="exportProductsData()"></app-export>
 </div>
