--- a/client-angular/src/app/shared/header/header.component.html
+++ b/client-angular/src/app/shared/header/header.component.html
@@ -35,6 +35,9 @@
                     <a routerLink="/login-component" routerLinkActive="active"
                         ariaCurrentWhenActive="page" class="nav-link">Login</a>
                 </li>
+                <li class="nav-item">
+                    <a (click)="logout()" class="nav-link">Logout</a>
+                </li>
             </ul>
         </div>
         <ul class="d-flex navbar-nav">
