--- a/client-angular/src/app/auth/signup/signup.component.html
+++ b/client-angular/src/app/auth/signup/signup.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
     <div class="mb-3">
         <label for="firstName" class="form-label">First Name</label>
-        <input #first formControlName="firstName" type="text" class="form-control"
+        <input #first formControlName="first_name" type="text" class="form-control"
             id="firstName">
     </div>
     <div class="mb-3">
         <label for="lastName" class="form-label">Last Name</label>
-        <input formControlName="lastName" type="text" class="form-control" id="lastName">
+        <input formControlName="last_name" type="text" class="form-control" id="lastName">
     </div>
     <div class="mb-3">
         <label for="email" class="form-label">Email</label>
